added some confirmation pop ups and started on my books page (+working on borrow books)

--- a/BookOnShelfBlazor/Components/Pages/BookDetails.razor
+++ b/BookOnShelfBlazor/Components/Pages/BookDetails.razor
@@ -14,6 +14,8 @@
 @inject NavigationManager NavigationManager
 @inject AuthenticationStateProvider AuthenticationStateProvider
 @inject UserManager<ApplicationUser> UserManager
+@inject IJSRuntime JSRuntime
+
 @rendermode InteractiveServer
 
 <h3 class="text-center">Book Details</h3>
@@ -300,11 +302,33 @@
             <button class="btn-danger delete-book-btn" @onclick="DeleteBook">
                 <i class="bi bi-trash" style="font-size:30px"></i>
             </button>
+            
+            <button class="btn-primary edit-book-btn" @onclick='()=>NavigationManager.NavigateTo($"EditBook/{BookId}")'>
+                <i class="bi bi-pencil" style="font-size:30px"></i>
+            </button>
+            <button class="btn-primary delete-book-btn" @onclick="TriggerAddOrRemoveAmountPopUp">
+                <i class="bi bi-arrow-down-up" style="font-size:30px"></i>
+            </button>
             @if(Book.IsUnavailable == false)
             {
             <button class="btn-danger delete-book-btn" @onclick="SetBookUnavailable">
                 <i class="bi bi-x-circle" style="font-size:30px">
                     </i</button>
+                                <hr />
+            @if(Book.AmountAvailable != 0)
+            {
+                <button class="btn-success delete-book-btn" @onclick="PutBookInAwait">
+                  <i class="bi bi-basket3" style="font-size:30px;"></i>
+                  <span style="font-size:10px;">Borrow</span>
+                </button>
+            }
+            else
+            {
+                <button class="btn-warning delete-book-btn">
+                <i class="bi bi-calendar-check" style="font-size:30px"></i>
+                <span style="font-size:10px;">Reserve</span>
+                </button>
+            }
             }
             else
             {
@@ -312,12 +336,6 @@
                     <i class="bi bi-check-circle" style="font-size:30px"></i>
                     </button>
             }
-            <button class="btn-primary edit-book-btn" @onclick='()=>NavigationManager.NavigateTo($"EditBook/{BookId}")'>
-                <i class="bi bi-pencil" style="font-size:30px"></i>
-            </button>
-            <button class="btn-primary delete-book-btn" @onclick="TriggerAddOrRemoveAmountPopUp">
-                <i class="bi bi-arrow-down-up" style="font-size:30px"></i>
-            </button>
         </div>
     </div>
 </AuthorizeView>
@@ -341,6 +359,7 @@
     public BookReviews review = new BookReviews();
     public ClaimsPrincipal authUser;
     public ApplicationUser user;
+    public BooksInAwaitOfGetting BooksInAwait = new BooksInAwaitOfGetting();
 
     public List<Writers> Writers = new List<Writers>();
     public List<BookReviews> Reviews = new List<BookReviews>();
@@ -351,8 +370,6 @@
     private bool ShowFrontImage = true;
     private bool ShowEditReview = false;
     private bool ShowAddOrRemoveAmountPopUp = false;
-
-
     #endregion
 
     #region OnInitialized
@@ -378,13 +395,10 @@
         authUser = authState.User;
 
         user = await UserManager.FindByEmailAsync(authUser.Identity.Name);
-
     }
-
     #endregion
 
     #region ImageStuff
-
     private string GetImageSource(byte[] imageData)
     {
         if (imageData == null || imageData.Length == 0)
@@ -397,73 +411,106 @@
     {
         ShowFrontImage = !ShowFrontImage;
     }
-
     #endregion
+
+    private async Task PutBookInAwait()
+    {
+        if (await JSRuntime.InvokeAsync<bool>("confirm", default(CancellationToken), new object[] { "Are you sure you want to borrow this book?" }))
+        {
+            DateTime TodaysDateTime = DateTime.Now;
+            DateOnly TodaysDateOnly = new DateOnly(TodaysDateTime.Year, TodaysDateTime.Month, TodaysDateTime.Day);
+            BooksInAwait.BookId = Book;
+            BooksInAwait.UserId = await UserManager.FindByEmailAsync(authUser.Identity.Name);
+            BooksInAwait.BeginDate = TodaysDateOnly;
+            BooksInAwait.EndDate = TodaysDateOnly.AddDays(7);
+            Book.AmountAvailable -= 1;
+
+            Context.BooksInAwaitOfGetting.Add(BooksInAwait);
+            Context.Books.Update(Book);
+            await Context.SaveChangesAsync();
+        }
+    }
 
     #region ReviewStuff
-    private void TriggerEditReview(int reviewId)
-    {
-        reviewIdToEdit = reviewId;
-        ShowEditReview = true;
-    }
+        private void TriggerEditReview(int reviewId)
+        {
+            reviewIdToEdit = reviewId;
+            ShowEditReview = true;
+        }
 
-    private void TriggerCloseEditReview()
-    {
-        ShowEditReview = false;
-    }
+        private void TriggerCloseEditReview()
+        {
+            ShowEditReview = false;
+        }
 
-    private async void DeleteReview(BookReviews review)
-    {
-        review.IsDeleted = true;
-        Context.BookReviews.Update(review);
-        await Context.SaveChangesAsync();
-    }
+        private async void DeleteReview(BookReviews review)
+        {
+            if (await JSRuntime.InvokeAsync<bool>("confirm", default(CancellationToken), new object[] { "Are you sure you want to delete this review?" }))
+            {
+                review.IsDeleted = true;
+                Context.BookReviews.Update(review);
+                await Context.SaveChangesAsync();
+            }
+        }
 
-    private async Task AddReview()
-    {
-        review.Bookid = Book;
-        review.Review = NewReview;
-        review.UserId = await UserManager.FindByEmailAsync(authUser.Identity.Name);
+        private async Task AddReview()
+        {
+            review.Bookid = Book;
+            review.Review = NewReview;
+            review.UserId = await UserManager.FindByEmailAsync(authUser.Identity.Name);
 
-        Context.BookReviews.Add(review);
-        Context.SaveChangesAsync();
-        Console.WriteLine("Review added");
-    }
+            Context.BookReviews.Add(review);
+            Context.SaveChangesAsync();
+            Console.WriteLine("Review added");
+        }
 
     #endregion
 
-    private void TriggerAddOrRemoveAmountPopUp()
-    {
-        // BookId = BookId;
-        ShowAddOrRemoveAmountPopUp = true;
-    }
+    #region AddOrRemoveAmountStuff
+        private void TriggerAddOrRemoveAmountPopUp()
+        {
+            ShowAddOrRemoveAmountPopUp = true;
+        }
 
-    private void TriggerAddOrRemoveAmountPopUpClose()
-    {
-        ShowAddOrRemoveAmountPopUp = false;
-    }
+        private void TriggerAddOrRemoveAmountPopUpClose()
+        {
+            ShowAddOrRemoveAmountPopUp = false;
+        }
+    #endregion
+
     #region BookStuff
-    private async void SetBookAvailable()
-    {
-        Book.IsUnavailable = false;
-        Context.Books.Update(Book);
-        await Context.SaveChangesAsync();
-    }
+        private async void SetBookAvailable()
+        {
+            if (await JSRuntime.InvokeAsync<bool>("confirm", default(CancellationToken), new object[] { "Are you sure you want to make this book available?" }))
+            {
+                Book.IsUnavailable = false;
+                Context.Books.Update(Book);
+                await Context.SaveChangesAsync();
+            }
+        }
 
-    private async void SetBookUnavailable()
-    {
-        Book.IsUnavailable = true;
-        Context.Books.Update(Book);
-        await Context.SaveChangesAsync();
-    }
+        private async void SetBookUnavailable()
+        {
+            if(await JSRuntime.InvokeAsync<bool>("confirm", default(CancellationToken), new object[] { "Are you sure you want to make this book unavailable?" }))
+            {
+                Book.IsUnavailable = true;
+                Context.Books.Update(Book);
+                await Context.SaveChangesAsync();
+            }
+       
+        }
 
-    private async void DeleteBook()
-    {
-        Book.IsDeleted = true;
-        Context.Books.Update(Book);
-        await Context.SaveChangesAsync();
-        NavigationManager.NavigateTo("/Library");
-    }
+        private async void DeleteBook()
+        {
+            if (await JSRuntime.InvokeAsync<bool>("confirm", default(CancellationToken), new object[] { "Are you sure you want to delete this book?" }))
+            {
+                Book.IsDeleted = true;
+                Context.Books.Update(Book);
+                await Context.SaveChangesAsync();
+                NavigationManager.NavigateTo("/Library");
+            }
+        }
+    
 
     #endregion
 }
