--- a/BookOnShelfBlazor/Components/Layout/NavMenu.razor
+++ b/BookOnShelfBlazor/Components/Layout/NavMenu.razor
@@ -26,6 +26,12 @@
                             <span>Home</span>
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/MyBooks"> 
+                            <i class="bi bi-bookmark custom-icon-size"></i>
+                            <span>My Books</span>
+                        </a>
+                    </li>
                 </AuthorizeView>
             </ul>
             <ul class="navbar-nav justify-content-center fs-4">
